Fixed spacing and edited bios on our-team page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -199,9 +199,14 @@ body {
   color: rgb(16, 16, 45);
 }
 
+.team-container #star-fiend-logo {
+  margin-top: 20px;
+}
+
 .team-greeting {
   font-weight: bold;
   font-size: 19px;
+  margin-top: 0;
   margin-bottom: 28px;
 }
 
@@ -220,7 +225,7 @@ body {
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
-  gap: 20px;
+  gap: 120px;
 }
 
 .member {
@@ -305,9 +310,6 @@ body {
   right: 0;
 }
 
-.next-previous-bar a {
-
-}
 .next-previous-bar a:link {
   color: rgb(16, 16, 45);
 }
@@ -406,6 +408,10 @@ the latter will have a small overlap with min-width: 480px.
 
   .blog-history {
     display: none;
+  }
+
+  .members-list {
+    gap: 60px;
   }
 }
 
